advanced/ingress-minikube.yaml
# minikube addons enable ingress
# Instala ingress controller de nginx lo cual actúa de load balancer
# Los request que vayan a nginx.example.com/test se redirigen a nginx-service

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" # Specify the ingress controller to use
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx.example.com # Replace with your domain name
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: nginx-service # The Service exposing the app
            port:
              number: 80
